Modify EDA comments

--- a/prediction_weather/EDA.ipynb
+++ b/prediction_weather/EDA.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "0c322f15",
    "metadata": {},
    "outputs": [
@@ -144,20 +144,19 @@
     "missing_data = missing_data[missing_data > 0]  # 결측치가 0보다 큰 컬럼만 필터링\n",
     "print(\"\\n결측치가 있는 컬럼:\")\n",
     "print(missing_data)\n",
-    "\"\"\"\n",
-    "GST, RVR1, RVR2, WC, CA1, CT1, CH1, CA2, CT2, CH2, CA3, CT3, CH3, CA4, CT4, CH4, TA, TD, HM, RN 컬럼에 결측치가 존재함.\n",
-    "GST 돌풍속 - 결측치 80% 이상 -> 제거\n",
-    "RVR1, RVR2 활주로 시정 - 결측치 80% -> 제거\n",
-    "WC 현재일기 - 결측치 64.5% -> 날씨는 시정의 주요 영향인자이므로, 결측치 대체 방법 고민 필요\n",
-    "CA1, CT1, CH1 (1층 운량, 운형, 운고) - 결측치 29% -> 결측치 대체 방법 고민 필요\n",
-    "CA2, CT2, CH2 (2층 운량, 운형, 운고) - 결측치 67% - > 결측치 대체 방법 고민 필요, 제거할지 보류\n",
-    "CA3, CT3, CH3 (3층 운량, 운형, 운고) - 결측치 80% 이상 -> 제거 -> 값이 있을떄 1, 없을때 0으로 이진화하여 대체하는 방법 고민\n",
-    "CA4, CT4, CH4 (4층 운량, 운형, 운고) - 결측치 80% 이상 -> 제거 -> 값이 있을떄 1, 없을때 0으로 이진화하여 대체하는 방법 고민\n",
-    "TA 기온 - 결측치 0.06% -> 보간법으로 대체\n",
-    "TD 이슬점온도 - 결측치 0.06% -> 보간법으로 대체\n",
-    "HM 상대습도 - 결측치 0.06% -> 보간법으로 대체\n",
-    "RM 강수량 - 결측치 89% -> 강수량이 0인 경우가 많으므로, 0으로 대체\n",
-    "\"\"\"\n"
+    "\n",
+    "# GST, RVR1, RVR2, WC, CA1, CT1, CH1, CA2, CT2, CH2, CA3, CT3, CH3, CA4, CT4, CH4, TA, TD, HM, RN 컬럼에 결측치가 존재함.\n",
+    "# GST 돌풍속 - 결측치 80% 이상 -> 제거\n",
+    "# RVR1, RVR2 활주로 시정 - 결측치 80% -> 제거\n",
+    "# WC 현재일기 - 결측치 64.5% -> 날씨는 시정의 주요 영향인자이므로, 결측치 대체 방법 고민 필요\n",
+    "# CA1, CT1, CH1 (1층 운량, 운형, 운고) - 결측치 29% -> 결측치 대체 방법 고민 필요\n",
+    "# CA2, CT2, CH2 (2층 운량, 운형, 운고) - 결측치 67% - > 결측치 대체 방법 고민 필요, 제거할지 보류\n",
+    "# CA3, CT3, CH3 (3층 운량, 운형, 운고) - 결측치 80% 이상 -> 제거 -> 값이 있을떄 1, 없을때 0으로 이진화하여 대체하는 방법 고민\n",
+    "# CA4, CT4, CH4 (4층 운량, 운형, 운고) - 결측치 80% 이상 -> 제거 -> 값이 있을떄 1, 없을때 0으로 이진화하여 대체하는 방법 고민\n",
+    "# TA 기온 - 결측치 0.06% -> 보간법으로 대체\n",
+    "# TD 이슬점온도 - 결측치 0.06% -> 보간법으로 대체\n",
+    "# HM 상대습도 - 결측치 0.06% -> 보간법으로 대체\n",
+    "# RM 강수량 - 결측치 89% -> 강수량이 0인 경우가 많으므로, 0으로 대체\n"
    ]
   },
   {
@@ -329,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "3189c9cd",
    "metadata": {},
    "outputs": [
@@ -383,21 +382,19 @@
     "print(\"Correlation with Visibility (VS):\")\n",
     "print(vs_corr)\n",
     "\n",
-    "\"\"\"\n",
-    "PS, PA : 기압과 시정은 대체로 양의 상관관계를 가짐. 기압이 높을수록 대기가 안정되어 시정이 좋아질 가능성이 크다고 예상\n",
-    "-> 실제로는 기압과는 상관계수가 미미하게 존재함, 파생변수로 해면기압과 현지기압의 차이를 구하려고 했는데, 사실상 관측소가 가까워서 그런지 차이가 거의 없음\n",
-    "TA : 기온과 이슬점은 상관관계를 갖기에, 안개 강수등과의 연관은 있을 수 있지만 실제 시정관계의 직접적인 영향이 크지 않음\n",
-    "WD : 풍향과 시정은 특정 풍향에서 시정이 더 좋거나 나쁠 수 있음 현재는 인천공항의 자료를 사용중이므로, 바다쪽에서 불어오는 바람이 대다수여서 영향이 거의 없음\n",
+    "# PS, PA : 기압과 시정은 대체로 양의 상관관계를 가짐. 기압이 높을수록 대기가 안정되어 시정이 좋아질 가능성이 크다고 예상\n",
+    "# -> 실제로는 기압과는 상관계수가 미미하게 존재함, 파생변수로 해면기압과 현지기압의 차이를 구하려고 했는데, 사실상 관측소가 가까워서 그런지 차이가 거의 없음\n",
+    "# TA : 기온과 이슬점은 상관관계를 갖기에, 안개 강수등과의 연관은 있을 수 있지만 실제 시정관계의 직접적인 영향이 크지 않음\n",
+    "# WD : 풍향과 시정은 특정 풍향에서 시정이 더 좋거나 나쁠 수 있음 현재는 인천공항의 자료를 사용중이므로, 바다쪽에서 불어오는 바람이 대다수여서 영향이 거의 없음\n",
     "\n",
-    "CH, CA, CT : 구름의 양과 높이는 시정에 영향을 미칠 수 있음. 특히 저층운이 시정에 더 큰 영향을 미칠 수 있음\n",
-    "-> 고층운은 시정에 큰 영향 없음(4층의 경우 drop하는것이 바람직해보임)\n",
+    "# CH, CA, CT : 구름의 양과 높이는 시정에 영향을 미칠 수 있음. 특히 저층운이 시정에 더 큰 영향을 미칠 수 있음\n",
+    "# -> 고층운은 시정에 큰 영향 없음(4층의 경우 drop하는것이 바람직해보임)\n",
     "\n",
-    "WS : 풍속과 시정은 양의 상관관계를 가짐. 바람이 강할수록 대기 중의 입자들이 흩어져 시정이 좋아질 가능성이 큼\n",
-    "TD : 이슬점온도와 시정은 음의 상관관계를 가짐. 이슬점온도가 높을수록 대기 중의 수증기량이 많아져 시정이 나빠질 가능성이 큼\n",
-    "RN : 강수량과 시정은 음의 상관관계를 가짐. 강수량이 많을수록 대기 중의 입자들이 많아져 시정이 나빠질 가능성이 큼\n",
-    "HM : 상대습도와 시정은 음의 상관관계를 가짐. 상대습도가 높을수록 대기 중의 수증기량이 많아져 시정이 나빠질 가능성이 큼\n",
-    "WC : 현재일기 코드와 시정은 특정 일기 상태에서 시정이 더 좋거나 나쁠 수 있음\n",
-    "\"\"\""
+    "# WS : 풍속과 시정은 양의 상관관계를 가짐. 바람이 강할수록 대기 중의 입자들이 흩어져 시정이 좋아질 가능성이 큼\n",
+    "# TD : 이슬점온도와 시정은 음의 상관관계를 가짐. 이슬점온도가 높을수록 대기 중의 수증기량이 많아져 시정이 나빠질 가능성이 큼\n",
+    "# RN : 강수량과 시정은 음의 상관관계를 가짐. 강수량이 많을수록 대기 중의 입자들이 많아져 시정이 나빠질 가능성이 큼\n",
+    "# HM : 상대습도와 시정은 음의 상관관계를 가짐. 상대습도가 높을수록 대기 중의 수증기량이 많아져 시정이 나빠질 가능성이 큼\n",
+    "# WC : 현재일기 코드와 시정은 특정 일기 상태에서 시정이 더 좋거나 나쁠 수 있음"
    ]
   },
   {
@@ -637,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "d9cd3844",
    "metadata": {},
    "outputs": [
@@ -674,43 +671,40 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
+    "# VS와 WC 간의 관계를 분석해보면 아래와 같은 인사이트를 얻을 수 있음\n",
+    "# 1. 안개/빙무(Fog/Ice fog; 11–12, 28, 40–49)\n",
+    "# -> 시정이 매우 낮음 ≈ ~1km, 저시정 비율 VS<1km ≈ 47% / <2km ≈ 69% / <5km ≈ 96%.\n",
     "\n",
-    "\"\"\"\n",
-    "VS와 WC 간의 관계를 분석해보면 아래와 같은 인사이트를 얻을 수 있음:\n",
-    "1. 안개/빙무(Fog/Ice fog; 11–12, 28, 40–49)\n",
-    "-> 시정이 매우 낮음 ≈ ~1km, 저시정 비율 VS<1km ≈ 47% / <2km ≈ 69% / <5km ≈ 96%.\n",
+    "# 2. 이슬비(Drizzle; 50–59)\n",
+    "# 저시정 영향 큼. 중앙값 ≈ ~3.3km, <2km ≈ 26% / <5km ≈ 72%.\n",
     "\n",
-    "2. 이슬비(Drizzle; 50–59)\n",
-    "저시정 영향 큼. 중앙값 ≈ ~3.3km, <2km ≈ 26% / <5km ≈ 72%.\n",
+    "# 3. 뇌우(Thunderstorm; 90–99)\n",
+    "# 중앙값 중간대(≈ ~5km), 분산 큼. <2km ≈ 9% / <5km ≈ 50%.\n",
     "\n",
-    "3. 뇌우(Thunderstorm; 90–99)\n",
-    "중앙값 중간대(≈ ~5km), 분산 큼. <2km ≈ 9% / <5km ≈ 50%.\n",
+    "# 4. 고체강수(눈 등; 70–79)\n",
+    "# 중간~높은 저하. <2km ≈ 19% / <5km ≈ 45%.\n",
     "\n",
-    "4. 고체강수(눈 등; 70–79)\n",
-    "중간~높은 저하. <2km ≈ 19% / <5km ≈ 45%.\n",
+    "# 5. 비(Rain; 60–69)\n",
+    "# 생각보다 시정 유지되는 케이스 많음. <2km ≈ 3% / <5km ≈ 32%.\n",
     "\n",
-    "5. 비(Rain; 60–69)\n",
-    "생각보다 시정 유지되는 케이스 많음. <2km ≈ 3% / <5km ≈ 32%.\n",
+    "# 6. 소나기(Showers; 80–89), 최근/원거리 현상(20–29, 13–17)\n",
+    "# 생각보다 고정적으로 시정이 높은것으로 보임, 그러나 정의상 주변/직전 한 시간 또는 원거리 이벤트라 관측 지점의 즉시 시정 저하는 약함.\n",
     "\n",
-    "6. 소나기(Showers; 80–89), 최근/원거리 현상(20–29, 13–17)\n",
-    "생각보다 고정적으로 시정이 높은것으로 보임, 그러나 정의상 주변/직전 한 시간 또는 원거리 이벤트라 관측 지점의 즉시 시정 저하는 약함.\n",
+    "# 7. 나머지\n",
+    "# 대부분 시정이 양호함. 특히 먼지/모래(Dust/Sand phenomena; 07–09, 30–35), 바람에 날리는 눈(Blowing/Drifting snow; 36–39)은 시정 영향 거의 없음.\n",
     "\n",
-    "7. 나머지\n",
-    "대부분 시정이 양호함. 특히 먼지/모래(Dust/Sand phenomena; 07–09, 30–35), 바람에 날리는 눈(Blowing/Drifting snow; 36–39)은 시정 영향 거의 없음.\n",
-    "\n",
-    "안개/빙무, 이슬비, 눈, 뇌우 + 비 순으로 저시정 위험이 커지는 경향.\n",
-    "다만 VS는 상한 10km에 값이 치우쳐져 있어 중앙값만으론 차이가 뭉개질 수 있으니, 저시정 비율 지표를 함께 고려하는 것이 바람직.\n",
+    "# 안개/빙무, 이슬비, 눈, 뇌우 + 비 순으로 저시정 위험이 커지는 경향.\n",
+    "# 다만 VS는 상한 10km에 값이 치우쳐져 있어 중앙값만으론 차이가 뭉개질 수 있으니, 저시정 비율 지표를 함께 고려하는 것이 바람직.\n",
     "\n",
     "\n",
-    "=> WC는 확실히 시정과 밀접한 연관이 있어보임, 상한 시정인 10000m 이상의 데이터가 많아서 상관관계가 다소 낮게 나오는것으로 보임.\n",
+    "# => WC는 확실히 시정과 밀접한 연관이 있어보임, 상한 시정인 10000m 이상의 데이터가 많아서 상관관계가 다소 낮게 나오는것으로 보임.\n",
     "\n",
-    "=> WC 그룹핑을 통해서 범주형 변수로 변환하는것이 바람직해보임, 대분류로 묶고 one-hot Enocoding을 하는것이 바람직해보임.\n",
-    "\"\"\""
+    "# => WC 그룹핑을 통해서 범주형 변수로 변환하는것이 바람직해보임, 대분류로 묶고 one-hot Encoding을 하는것이 바람직해보임."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "5da0df50",
    "metadata": {},
    "outputs": [
@@ -786,20 +780,17 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "\"\"\"\n",
-    "저습(≤70%) 구간: 저시정 비율이 사실상 0%에 가깝게 유지.\n",
-    "-> 일반적으로 건조할수록 시정이 좋아지는 패턴과 일치.\n",
+    "# 저습(≤70%) 구간: 저시정 비율이 사실상 0%에 가깝게 유지.\n",
+    "# -> 일반적으로 건조할수록 시정이 좋아지는 패턴과 일치.\n",
     "\n",
-    "고습(≥80%) 진입 후 급상승: 저시정 비율이 급격히 증가.\n",
-    "HM 80% 부근부터 <3mile 위험이 눈에 띄게 증가(완만→가팔라지는 모양).\n",
-    "HM 85~90%에서 <1mile 위험이 저자릿수(1~3%) → 한 자릿수 중후반대로 오르고, <3mile은 두 자릿수로 진입.\n",
-    "\n",
-    "\"\"\""
+    "# 고습(≥80%) 진입 후 급상승: 저시정 비율이 급격히 증가.\n",
+    "# HM 80% 부근부터 <3mile 위험이 눈에 띄게 증가(완만→가팔라지는 모양).\n",
+    "# HM 85~90%에서 <1mile 위험이 저자릿수(1~3%) → 한 자릿수 중후반대로 오르고, <3mile은 두 자릿수로 진입."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "cfcc7952",
    "metadata": {},
    "outputs": [
@@ -827,32 +818,28 @@
     "df_rn[\"VS\"] = pd.to_numeric(df_rn[\"VS\"], errors=\"coerce\")\n",
     "df_rn = df_rn.dropna(subset=[\"VS\"]).copy()\n",
     "\n",
-    "# RN 정리: 음수값 제거(-9 등), 단위 환산(0.1mm/h → mm/h; 필요시 SCALE=1로 바꿔도 됨)\n",
-    "SCALE = 0.1  # 단위가 0.1mm면 0.1, 이미 mm이면 1\n",
+    "SCALE = 1\n",
     "df_rn.loc[df_rn[\"RN\"] < 0, \"RN\"] = np.nan\n",
     "df_rn[\"RN_MM\"] = df_rn[\"RN\"] * SCALE\n",
     "\n",
-    "# 분석은 '유효 RN'만 (관측되지 않은 RN은 제외)\n",
-    "valid = df_rn.dropna(subset=[\"RN_MM\"]).copy()\n",
-    "\n",
-    "# 1) 상관계수 (모든 유효 RN에서)\n",
-    "pearson = valid[[\"RN_MM\",\"VS\"]].corr(method=\"pearson\").iloc[0,1]\n",
-    "spearman = valid[[\"RN_MM\",\"VS\"]].corr(method=\"spearman\").iloc[0,1]\n",
+    "# 상관계수\n",
+    "pearson = df_rn[[\"RN_MM\",\"VS\"]].corr(method=\"pearson\").iloc[0,1]\n",
+    "spearman = df_rn[[\"RN_MM\",\"VS\"]].corr(method=\"spearman\").iloc[0,1]\n",
     "print(f\"[Corr] Pearson(RN,VS) = {pearson:.4f}, Spearman(RN,VS) = {spearman:.4f}\")\n",
     "\n",
-    "# 2) 강수 강도 구간(bin) 정의\n",
-    "#    0(건기), 약한비, 보통비, 강한비, 호우… 대략적인 기상 운영 기준에 맞춘 구간\n",
+    "# 강수 강도 구간(bin) 정의\n",
+    "#  0(건기), 약한비, 보통비, 강한비, 호우… 대략적인 기상 운영 기준에 맞춘 구간\n",
     "bins = [-0.0001, 0.0, 0.2, 1.0, 3.0, 10.0, np.inf]  # mm/h\n",
     "labels = [\"0.0\", \"0.0–0.2\", \"0.2–1\", \"1–3\", \"3–10\", \"10+\"]\n",
     "\n",
-    "valid[\"RN_BIN\"] = pd.cut(valid[\"RN_MM\"], bins=bins, labels=labels, include_lowest=True, right=True)\n",
+    "df_rn[\"RN_BIN\"] = pd.cut(df_rn[\"RN_MM\"], bins=bins, labels=labels, include_lowest=True, right=True)\n",
     "\n",
-    "# 3) 구간별 VS 요약 + 저시정 비율 (1km, 1mile=1608m, 3mile=4828m)\n",
+    "# 구간별 VS 요약 + 저시정 비율 (1km, 1mile=1608m, 3mile=4828m)\n",
     "def q25(s): return np.nanpercentile(s, 25)\n",
     "def q75(s): return np.nanpercentile(s, 75)\n",
     "\n",
     "summary = (\n",
-    "    valid.groupby(\"RN_BIN\")[\"VS\"]\n",
+    "    df_rn.groupby(\"RN_BIN\")[\"VS\"]\n",
     "    .agg(\n",
     "        n=\"count\",\n",
     "        mean=\"mean\",\n",
@@ -871,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "e2c90c78",
    "metadata": {},
    "outputs": [
@@ -890,10 +877,10 @@
     "#대부분의 상관계수는 Pearson 상관계수보다, spearman 상관계수가 절대값이 더 높게 나옴.\n",
     "#아마 10000m로 상한 데이터가 몰려있어서, 선형관계보다는 비선형 관계가 더 강하게 나타나는것으로 보임.\n",
     "\n",
-    "# 4) 강수구간별 VS 분포 박스플롯\n",
+    "# 강수구간별 VS 분포 박스플롯\n",
     "plt.figure(figsize=(10,6))\n",
     "order = summary[\"RN_BIN\"].astype(str).tolist()\n",
-    "box_data = [valid.loc[valid[\"RN_BIN\"].astype(str)==g, \"VS\"].dropna().values for g in order]\n",
+    "box_data = [df_rn.loc[df_rn[\"RN_BIN\"].astype(str)==g, \"VS\"].dropna().values for g in order]\n",
     "plt.boxplot(box_data, labels=order, showfliers=False)\n",
     "plt.xlabel(\"Rain rate bin (mm/h)\")\n",
     "plt.ylabel(\"Visibility (m)\")\n",
@@ -904,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "06870ae6",
    "metadata": {},
    "outputs": [
@@ -920,7 +907,7 @@
     }
    ],
    "source": [
-    "# 5) 저시정 위험곡선(1km, 1mile, 3mile) vs 강수구간\n",
+    "# 저시정 위험곡선(1km, 1mile, 3mile) vs 강수구간\n",
     "x = np.arange(len(order))\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.plot(x, summary[\"pct_vs_lt_1000\"], marker=\"o\", label=\"< 1000 m\")\n",
