--- a/prediction_weather/EDA.ipynb
+++ b/prediction_weather/EDA.ipynb
@@ -985,6 +985,98 @@
     "# DPD가 작을수록 위험↑: DPD≤1°C 구간에서 <3mile 위험이 **35~38%**로 가장 높고, <1mile·<1km도 뚜렷하게 상승.\n",
     "# 건조 구간(≥5°C): 세 커브가 0%에 수렴 — 응결 가능성이 낮아 저시정 위험이 거의 없음."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9dc6de9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                     VS   R-squared:                       0.364\n",
+      "Model:                            OLS   Adj. R-squared:                  0.364\n",
+      "Method:                 Least Squares   F-statistic:                     2202.\n",
+      "Date:                Sun, 21 Sep 2025   Prob (F-statistic):               0.00\n",
+      "Time:                        23:59:15   Log-Likelihood:            -7.6142e+05\n",
+      "No. Observations:               84718   AIC:                         1.523e+06\n",
+      "Df Residuals:                   84695   BIC:                         1.523e+06\n",
+      "Df Model:                          22                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "=================================================================================\n",
+      "                    coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "---------------------------------------------------------------------------------\n",
+      "const          1.251e+04   1432.107      8.734      0.000    9700.614    1.53e+04\n",
+      "WD               -1.3053      0.068    -19.148      0.000      -1.439      -1.172\n",
+      "WS               79.2319      2.287     34.639      0.000      74.749      83.715\n",
+      "WC              -48.5190      0.560    -86.677      0.000     -49.616     -47.422\n",
+      "CA               32.7452     11.050      2.963      0.003      11.088      54.402\n",
+      "CA1             -54.1001     10.163     -5.323      0.000     -74.020     -34.180\n",
+      "CT1            -124.2246      3.940    -31.530      0.000    -131.947    -116.503\n",
+      "CH1               0.0066      0.001      4.657      0.000       0.004       0.009\n",
+      "CA2             168.7577     10.128     16.662      0.000     148.907     188.609\n",
+      "CT2            -123.0571     10.599    -11.610      0.000    -143.831    -102.283\n",
+      "CH2              -0.0336      0.003    -11.146      0.000      -0.039      -0.028\n",
+      "CA3             194.2250     29.138      6.666      0.000     137.114     251.336\n",
+      "CT3            -179.6997     36.280     -4.953      0.000    -250.808    -108.591\n",
+      "CH3              -0.0451      0.010     -4.614      0.000      -0.064      -0.026\n",
+      "CA4             561.3516    593.139      0.946      0.344    -601.197    1723.900\n",
+      "CT4            -816.3423    781.873     -1.044      0.296   -2348.808     716.123\n",
+      "CH4               0.0723      0.303      0.239      0.811      -0.521       0.665\n",
+      "TA              -72.8005      1.910    -38.108      0.000     -76.545     -69.056\n",
+      "TD              118.1991      2.198     53.767      0.000     113.890     122.508\n",
+      "HM             -105.8003      1.579    -66.997      0.000    -108.895    -102.705\n",
+      "PA             -106.6064      5.014    -21.262      0.000    -116.434     -96.779\n",
+      "PS              111.2528      5.022     22.155      0.000     101.411     121.095\n",
+      "RN              -29.0494      6.382     -4.552      0.000     -41.559     -16.540\n",
+      "Pressure_Diff   217.8592      9.939     21.919      0.000     198.378     237.341\n",
+      "DPD            -190.9996      3.979    -48.005      0.000    -198.798    -183.201\n",
+      "==============================================================================\n",
+      "Omnibus:                    10457.524   Durbin-Watson:                   0.268\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            18455.796\n",
+      "Skew:                          -0.829   Prob(JB):                         0.00\n",
+      "Kurtosis:                       4.574   Cond. No.                     9.89e+17\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 7.37e-24. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "df[\"DPD\"] = df[\"TA\"] - df[\"TD\"]\n",
+    "# df = df.drop(columns=['TM'])\n",
+    "y = df['VS']\n",
+    "X = df.drop(columns=['VS'])\n",
+    "\n",
+    "X = sm.add_constant(X)  # 상수항 추가\n",
+    "model = sm.OLS(y, X).fit()\n",
+    "\n",
+    "summary = model.summary()\n",
+    "print(summary)\n",
+    "\n",
+    "with open('ols_summary.txt', 'w') as f:\n",
+    "    f.write(str(summary))\n",
+    "\n",
+    "# 안정성 문제로 실제 prediction pipeline에서는 사용하지 않음\n",
+    "# 예상대로 4층 운량, 운형, 운고는 유의하지 않음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f322b360",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
